# pysniffer

./: LICENSE.txt  MANIFEST.in  README.md  main.py  project_structure.txt  pyproject.toml  setup.py
.github/workflows/: releasebuild.yml
pysniffer/: __init__.py  decorator.py
src/pysniffer/: __init__.py  decorator.py  interfaces.py
test/: test_decorator.py
